# cardinal

./: .gitignore  .lldbinit  Makefile  README.md  bt.bash  dump.bash  format.bash  make.bash  run.bash  step.bash
.cargo/: config.toml
allocator/: Cargo.toml
allocator/fuzz/: Cargo.toml
allocator/fuzz/fuzz_targets/: fuzz_linky.rs
allocator/src/: lib.rs  linky.rs
interface/: Cargo.toml
interface/src/: lib.rs  macros.rs
kernel/: Cargo.toml  limine.cfg  link.ld
kernel/.cargo/: config.toml
kernel/src/: arch.rs  async_test.rs  ipi.rs  lib.rs  main.rs  mem.rs  per_cpu.rs  pmm.rs  print.rs  syscalls.rs  thread.rs  timer.rs  vmm.rs
kernel/src/alloc/: mod.rs
kernel/src/allocator/: linky.rs
kernel/src/executor/: mod.rs  sleep.rs
kernel/src/limine/: boot_info.rs  hhdm.rs  mmap.rs  mod.rs  module.rs  rsdp.rs  smp.rs
kernel/src/net/: ethernet.rs  icmp.rs  ipv4.rs  mod.rs  packet.rs  socket.rs
kernel/src/net/proto/: ethernet.rs  icmp.rs  ipv4.rs  mod.rs
kernel/src/pci/: mod.rs  rtl8139.rs
kernel/src/process/: map.rs  mod.rs
kernel/src/x86/: acpi.rs  context.rs  cpu.rs  frame.rs  gdt.rs  idt.rs  interrupts.rs  ioapic.rs  lapic.rs  long_jump.rs  mod.rs  page.rs  pic.rs  pio.rs  serial.rs
userland/: Cargo.toml
userland/.cargo/: config.toml
userland/src/: async_rw.rs  executor.rs  format.rs  lib.rs  syscall.rs
