[package]
name = "cardinal3-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
acpi = "4.1.1"
array-init = "2.1.0"
elf = { version = "0.7.2", default-features = false }

cardinal3-interface = { path = "../interface" }
bitflags = "2.4.0"

[profile.dev]
opt-level = 1
lto = true
