[package]
name = "cardinal3-userland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
cardinal3-allocator = { path = "../allocator" }
cardinal3-interface = { path = "../interface" }

[profile.dev]
opt-level = 1
lto = true
