[package]
name = "cardinal3-allocator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"

[dependencies.cardinal3-allocator]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_linky"
path = "fuzz_targets/fuzz_linky.rs"
test = false
doc = false
